Bug 200647 - Advanced Slideshow - not all main settings are not restored correctly
Summary: Advanced Slideshow - not all main settings are not restored correctly
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-Generic-Presentation (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-07-18 14:21 UTC by Richard Fric
Modified: 2018-03-23 11:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Fric 2009-07-18 14:21:18 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

Delay between images setting is always set to 1 when starting Advanced Slideshow. It should remember the last used value.
Comment 1 Andi Clemens 2009-07-19 16:17:17 UTC
SVN commit 999245 by aclemens:

Fix loading of the saved delay value from the config file.
The value was actually saved correctly, but not used properly.
This commit should have fixed this.

BUG:200647

 M  +6 -9      maindialog.cpp  
 M  +1 -1      maindialog.h  
 M  +1 -0      slideshowconfig.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=999245
Comment 2 Andi Clemens 2009-07-19 16:20:53 UTC
*** Bug 195702 has been marked as a duplicate of this bug. ***