Fix loading of the saved delay value from the config file. The value was actually saved correctly, but not used properly. This commit should have fixed this.

BUG:200647

svn path=/trunk/extragear/graphics/kipi-plugins/; revision=999245