advancedslideshow/maindialog.h
@@ -59,7 +59,7 @@ private Q_SLOTS:
 
     void slotOpenGLToggled( void );
     void slotEffectChanged( void );
-    void slotDelayChanged( void );
+    void slotDelayChanged( int delay );
     void slotPrintCommentsToggled( void );
     void slotSelection( void );
     void slotUseMillisecondsToggled( void );
